--- a/CSS/master.css
+++ b/CSS/master.css
@@ -1,13 +1,14 @@
 @font-face {
-  font-family: "marvin";
+  font-family: "Marvin Visions Variable";
   src: url("/assets/MarvinVisionsTrial-Variable.ttf") format("truetype"),
        url("/assets/MarvinVisionsTrial-Variable.woff") format("woff"),
        url("/assets/MarvinVisionsTrial-Variable.woff2") format("woff2");
-       font-weight: 200;
+       font-weight: 20 170;
+       font-style: oblique 0deg 25deg;
 }
 
 html{
-  background-color: #f2F2F2;
+  background-color: #F1F7ED;
 }
 
 #container{
@@ -19,40 +20,43 @@ html{
 }
 
 h1{
-  font-family: marvin;
-  font-size: 2em;
-  font-style: oblique 20deg;
+  font-family: "Marvin Visions Variable";
+  font-size: 3em;
   text-align: center;
   width: 100vw;
+  animation-name : typochanges;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  margin: 1rem;
 }
 
 a{
   text-decoration: none;
   text-align: center;
-  width: calc(100vw/3)
+  width: calc(100vw/3);
+  margin: 1rem 0px 1rem 0;
 
 }
 
 div{
-  width: 150px;
-  height: 150px;
-  margin: 1rem;
-  text-align: center;
+  width: 300px;
+  height: 300px;
+  margin: 0.5rem;
+  padding: 0.5rem;
   transition:all .5s linear;
-  font-family: marvin;
+  font-family: "Marvin Visions Variable";
   font-size: 2em;
-  font-style: oblique 20deg;
   border: solid;
-  border-width: 2px;
-  border-radius: 10px;
+  border-width: 3px;
+  border-radius: 15px;
+  border-color: rgba(11, 48, 12, 1);
+  background-color: rgba(11, 48, 12, 0.2);
 }
 
 div[data-filter="vowels"]{
-  border-color: #85e093;
 }
 
 div[data-filter="consonants"]{
-  border-color: #2614d9;
 }
 
 a[data-filter="consonants"]:focus ~ div:not([data-filter="consonants"]){
@@ -69,4 +73,32 @@ a[data-filter="vowels"]:focus ~ div:not([data-filter="vowels"]){
   padding:0;
   margin:0;
   opacity:0;
+}
+
+div[data-filter="consonants"]:hover{
+  border-color:rgba(11, 34, 136, 1);/* Blue */
+  background-color: rgba(11, 34, 136, 0.2);
+}
+
+div[data-filter="vowels"]:hover{
+  border-color: rgba(231, 159, 83, 1);/* Orange */
+  background-color: rgba(231, 159, 83, 0.2);
+}
+
+@keyframes typochanges {
+  0%{
+    font-variation-settings: 'wght' 20, 'slnt' 0;
+  }
+  40%{
+    font-variation-settings: 'wght' 140, 'slnt' 14;
+  }
+  60%{
+    font-variation-settings: 'wght' 170, 'slnt' 25;
+  }
+  80%{
+    font-variation-settings: 'wght' 130, 'slnt' 14;
+  }
+  100%{
+    font-variation-settings: 'wght' 20, 'slnt' 0;
+  }
 }
