--- a/styles/master.css
+++ b/styles/master.css
@@ -34,15 +34,15 @@ a{
   text-decoration: none;
   text-align: center;
   width: calc(100vw/3);
-  margin: 1rem 0px 1rem 0;
+  margin: 0 0 1rem 0;
 
 }
 
 div{
   width: 300px;
   height: 300px;
-  margin: 0.5rem;
-  padding: 0.5rem;
+  margin: 0rem;
+  padding: 0rem;
   transition:all .5s linear;
   font-family: "Marvin Visions Variable";
   font-size: 2em;
