--- a/styles/master.css
+++ b/styles/master.css
@@ -112,3 +112,34 @@ p{
     font-variation-settings: 'wght' 20, 'slnt' 0;
   }
 }
+
+#progress{
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 10px;
+  transform-origin: 0 50%;
+  transform: scaleX(0);
+  background: blue;
+}
+
+@keyframes progression {
+  0%{
+   transform: scaleX(0);
+  }
+  100%{
+    transform: scaleX(1);
+  }
+}
+
+@scroll-timeline progress-time {
+  time-range: 2s;
+}
+
+#progress{
+  animation-name: progression;
+  animation-timeline: progress-time;
+  animation-duration: 2s;
+}
