--- a/styles/master.css
+++ b/styles/master.css
@@ -35,7 +35,16 @@ a{
   text-align: center;
   width: calc(100vw/3);
   margin: 0 0 1rem 0;
+  font-family: sans-serif;
+  font-size: 1rem;
+  color: black;
+}
 
+a:first-of-type:hover{
+  color: #2F80ED;
+}
+a:nth-of-type(2):hover{
+  color: rgba(231, 159, 83, 1);
 }
 
 div{
