--- a/styles/master.css
+++ b/styles/master.css
@@ -9,10 +9,24 @@
        font-style: oblique 0deg 25deg;
 }
 
+html{
+  background-color: #F3F2F3;
+}
+
 .hero{
   height: 70vh;
 }
 
+svg{
+  position: absolute;
+  z-index: -2;
+  width: 80vw;
+  opacity: 0.5;
+  top: 5%;
+  left:10%;
+}
+
+/* Animation Welcome */
 h5{
   font-family: "Marvin Visions Variable";
   font-size: 3rem;
@@ -23,6 +37,17 @@ h5{
   font-weight: 60;
 }
 
+@keyframes slidein {
+  from {
+    margin-left: -30%;
+  }
+  to {
+    text-align: center;
+    margin-top: 300px;
+  }
+}
+
+/* Swipe  */
 .hero p {
   text-align: center;
   margin-top: 45vh;
@@ -41,21 +66,7 @@ h5{
   }
 }
 
-@keyframes slidein {
-  from {
-    margin-left: -30%;
-  }
-  to {
-    /* margin-left: 20%; */
-    text-align: center;
-    margin-top: 300px;
-  }
-}
-
-html{
-  background-color: #F3F2F3;
-}
-
+/* Container filters */
 #container{
   display: flex;
   flex-direction: row;
@@ -64,6 +75,7 @@ html{
   width:100%;
 }
 
+/* Animation ABC's of directors */
 h1{
   font-family: "Marvin Visions Variable";
   font-size: 3em;
@@ -76,6 +88,25 @@ h1{
   animation-iteration-count: infinite;
 }
 
+@keyframes typochanges {
+  0%{
+    font-variation-settings: 'wght' 20, 'slnt' 0;
+  }
+  40%{
+    font-variation-settings: 'wght' 140, 'slnt' 14;
+  }
+  60%{
+    font-variation-settings: 'wght' 170, 'slnt' 25;
+  }
+  80%{
+    font-variation-settings: 'wght' 130, 'slnt' 14;
+  }
+  100%{
+    font-variation-settings: 'wght' 20, 'slnt' 0;
+  }
+}
+
+/* Buttons filters and texts */
 a{
   display: flex;
   text-decoration: none;
@@ -137,12 +168,10 @@ h3{
 }
 
 div[data-filter="femmes"]{
-  /* background-color: rgba(231, 159, 83, 0.2); */
   color: rgba(231, 159, 83, 1);
 }
 
 div[data-filter="hommes"]{
-  /* background-color: #EAF2FD; */
   color: #2F80ED;
 }
 
@@ -203,33 +232,16 @@ ul li{
   margin: 5px;
 }
 
-@keyframes typochanges {
-  0%{
-    font-variation-settings: 'wght' 20, 'slnt' 0;
-  }
-  40%{
-    font-variation-settings: 'wght' 140, 'slnt' 14;
-  }
-  60%{
-    font-variation-settings: 'wght' 170, 'slnt' 25;
-  }
-  80%{
-    font-variation-settings: 'wght' 130, 'slnt' 14;
-  }
-  100%{
-    font-variation-settings: 'wght' 20, 'slnt' 0;
-  }
-}
+/* Pop-up */
 
-/* Pop-up Amma Asante */
-
-.button{
+.buttonW{
   width: 200px;
   margin-top: 15px;
   border: none;
 }
 
-.button:hover{
+/* Button women orange */
+.buttonW:hover{
   opacity: 1;
   color: rgba(231, 159, 83, 1) ;
 }
@@ -237,10 +249,6 @@ ul li{
 .button:active{
   opacity: 1;
   color: rgba(231, 159, 83, 1) ;
-}
-
-#popup1 .backdrop{
-  margin: 0;
 }
 
 .backdrop {
@@ -253,6 +261,7 @@ ul li{
   visibility: hidden;
   opacity: 0;
 }
+
 .backdrop:target {
   visibility: visible;
   opacity: 1;
@@ -262,13 +271,14 @@ ul li{
   background: #fff;
   border-radius: 10px;
   border: none;
-  width: 30%;
+  min-width: 200px;
+  max-width: 800px;
   margin: 0 auto;
   transition: all 5s ease-in-out;
   display: grid;
-  grid-template-columns:2;
+  grid-template-columns: 2 / 2;
   grid-gap: 10px;
-  grid-auto-rows:2;
+  grid-auto-rows: 2 / 2;
 }
 
 .popup h4 {
@@ -305,13 +315,4 @@ ul li{
 
 .content p{
   line-height: 1.5;
-}
-
-svg{
-  position: absolute;
-  z-index: -2;
-  width: 80vw;
-  opacity: 0.5;
-  top: 5%;
-  left:10%;
 }
